# dev_sts_pi

./: .gitignore  README.md  setup_perms.sh
src/py_sts_pi/: package.xml  setup.cfg  setup.py
src/py_sts_pi/launch/: computer.launch.py  sts.launch.py  sts_2.launch.py
src/py_sts_pi/py_sts_pi/: __init__.py  arUco.py  display.py  flashcard_demo.py  follow_line_demo.py  follow_tag_demo.py  joystick_demo.py  motor_control.py  simpub.py  sts_pi_camera.py  threshold_display.py
src/py_sts_pi/py_sts_pi/APIs/: sts_pi_camera.py
src/py_sts_pi/py_sts_pi/Demonstrations/: flashcardDemo.py  flashcard_demo.py
src/py_sts_pi/test/: testMotors.py
src/sts_pi_interfaces/: CMakeLists.txt  package.xml
src/sts_pi_interfaces/msg/: ArUcoInfo.msg  MotorSpeeds.msg
