<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_sts_pi</name>
  <version>0.0.0</version>
  <description>This is the package for the University of York's Computer Science Open Day demonstration. This repository is intended to work with Ubuntu 20.04, ROS2 - Foxy Fitzgerald and the STS-Pi Roving Robot</description>
  <maintainer email="arn519@york.ac.uk">Aiden Neale</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv-python</depend>
  <depend>opencv-contrib-python</depend>

  <depend>sts_pi_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
